# thumper

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy.yml  release.yml
agent/: thumper_agent.sh
agent/plugins/alert/webhook/: manifest.yaml
agent/plugins/deploy/mdm/: manifest.yaml
docs/: architecture.md  plugins.md
plugins/deploy/mdm/: plugin.py
plugins/deploy/ssh/: manifest.yaml
server/thumper/: __init__.py  config.py  db.py  main.py  models.py  store.py
server/thumper/api/: routes.py
server/thumper/plugins/: base.py  loader.py
server/thumper/services/: alerting.py  deploy.py  jamf.py  signing.py
server/thumper/tokens/: catalog.py  generator.py
tests/: fake_jamf.py  test_agent_live_sync.py  test_agent_paths_preview.py  test_agent_plant.py  test_agent_singleton.py  test_deploy_isolation.py  test_deployment_race.py  test_heartbeat.py  test_install_command.py  test_integration_test_endpoint.py  test_jamf_client.py  test_jamf_live.py  test_settings.py  test_trigger_delivery.py
tools/: webhook_test_server.py
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ui/src/api/: index.ts  types.ts
ui/src/components/: PageTitle.test.tsx  PageTitle.tsx  ui.tsx
ui/src/config/: app.ts  pageTitle.ts
ui/src/pages/: CreateTripwire.tsx  Dashboard.tsx  EndpointDetail.tsx  Endpoints.tsx  Integrations.tsx  NotFound.tsx  Settings.tsx  TripwireDetail.tsx  Tripwires.tsx
ui/src/styles/: app.css
(+1 files in other folders)
